--- a/trunk/app.yaml
+++ b/trunk/app.yaml
@@ -1,4 +1,4 @@
-application: do-what
+application: gan-sha
 version: 1
 runtime: python
 api_version: 1
@@ -22,7 +22,7 @@ handlers:
 - url: /static
   static_dir: static
   secure: optional
-
+  
 - url: /remote_api
   script: $PYTHON_LIB/google/appengine/ext/remote_api/handler.py
   secure: optional
@@ -46,4 +46,3 @@ handlers:
 - url: /.*
   script: common/appenginepatch/main.py
   secure: optional
-
